<resources>
    <string name="app_name">Annapoorna</string>

    <string name="school">School</string>

    <string name="headmaster">Headmaster</string>

    <string name="students">Students</string>

    <string name="staff">Staff</string>

    <string name="name">Name</string>

    <string name="school_location">Location</string>

    <string name="type">Type</string>

    <string name="school_code">Code</string>

    <string name="phone_number">Phone Number</string>

    <string name="num_boys">Boys</string>

    <string name="num_girls">Girls</string>

    <string name="tot_students">Total</string>

    <string name="num_teachers">Teachers</string>

    <string name="num_cooks">Cooks</string>

    <string name="school_name_hint">School Name</string>

    <string name="school_type">School Type</string>

    <string name="school_location_hint">School Location</string>

    <string name="hm_name_hint">Headmaster Name</string>

    <string name="hm_phone_number_hint">Headmaster Phone Number</string>

    <string name="total_student_count_hint">Total Strength</string>

    <string name="boys_count_hint">Boys Strength</string>

    <string name="girls_count_hint">Girls Strength</string>

    <string name="staff_count_hint">Staff Strength</string>

    <string name="cook_count_hint">Cook Strength</string>

    <string name="blank_input_field_error">Cannot be left blank</string>

    <string name="invalid_input_toast_msg">Please verify input and try again.</string>

    <string name="student_name_hint">Student Name</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- empty school list -->
    <string name="empty_school_list">Sai Ram. \nNo school data found.</string>

    <string name="kids">Kids</string>
    <string name="kid">Kid</string>

    <string name="main_activity_title">Schools</string>

    <string name="student_details_input_title">Student Details</string>

    <string name="male">Male</string>

    <string name="female">Female</string>

    <string name="day">DD</string>

    <string name="enter_dob">Enter Date Of Birth(DD/MM/YYYY)</string>

    <string name="father_guardian_hint">Father/Guardian\'s Name</string>

    <string name="mother_hint">Mother\'s Name</string>

    <string name="student_address">Address</string>

    <string name="empty_student_list">Sai Ram \nNo student data found.</string>

    <string name="error_gender">Please select a gender</string>

    <string name="date_error">Required DD/MM/YYYY</string>

    <string name="age">Age</string>

    <string name="school_details">Details</string>

    <string name="school_students">Students</string>

    <string name="take_photo">Take a picture</string>

    <string name="health_dialog_msg">Enter Health Details</string>

    <string name="positive_health_dialog">YES</string>

    <string name="negative_health_dialog">NO</string>
</resources>
