<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/vertical_margin"
            tools:context="com.example.admin.annaporna.student.StudentDetailInputActivity">

            <LinearLayout
                android:id="@+id/take_picture_elem"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginBottom="@dimen/vertical_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                
                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">
                    <ImageView
                        android:id="@+id/student_picture"
                        android:background="#E0E0E0"
                        android:src="@drawable/ic_person"
                        android:layout_marginBottom="@dimen/student_image_bottom_margin"
                        android:layout_width="@dimen/student_image_view_square_dimension"
                        android:layout_height="@dimen/student_image_view_square_dimension"/>
                    <android.support.design.widget.FloatingActionButton
                        android:id="@+id/take_photo_view_btn"
                        app:elevation="0dp"
                        app:backgroundTint="@color/colorPrimary"
                        android:src="@drawable/ic_take_photo"
                        app:theme="@style/imageFAB"
                        android:clickable="true"
                        android:scaleType="center"
                        android:onClick="takeStudentPhoto"
                        android:layout_gravity="bottom|right|end"
                        android:layout_width="@dimen/take_photo_icon_side_dimensions"
                        android:layout_height="@dimen/take_photo_icon_side_dimensions"/>
                    <!--
                    <ImageButton
                        android:id="@+id/take_photo_view_btn"
                        android:onClick="takeStudentPhoto"
                        android:background="@color/colorPrimary"
                        android:layout_gravity="bottom|right|end"
                        android:src="@drawable/ic_take_photo"
                        android:layout_width="@dimen/take_photo_icon_side_dimensions"
                        android:layout_height="@dimen/take_photo_icon_side_dimensions"/>
                        -->
                </FrameLayout>

            </LinearLayout>

            <View
                android:id="@+id/div_below_take_picture"
                android:layout_marginEnd="4dp"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="4dp"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_below="@id/take_picture_elem"
                android:background="@color/colorDivider"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/student_name_input_layout"
                android:layout_below="@+id/div_below_take_picture"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                app:errorEnabled="true"
                app:errorTextAppearance="@style/InputTextErrorStyle">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/student_name_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/student_name_hint"
                    android:inputType="textImeMultiLine"/>
            </android.support.design.widget.TextInputLayout>

            <RadioGroup
                android:id="@+id/gender_radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/student_name_input_layout"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/radio_btn_boys"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onGenderBtnClick"
                    android:text="@string/male"/>

                <RadioButton
                    android:id="@+id/radio_btn_girls"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onGenderBtnClick"
                    android:text="@string/female"/>
            </RadioGroup>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/dob_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/gender_radio_group"
                app:errorEnabled="true"
                app:errorTextAppearance="@style/InputTextErrorStyle">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/date_dob_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_dob"
                    android:inputType="date"/>
            </android.support.design.widget.TextInputLayout>

            <!--
            <TextView
                android:id="@+id/first_slash"
                android:layout_toRightOf="@+id/date_day_input_layout"
                android:layout_alignBottom="@id/date_day_input_layout"
                android:layout_alignTop="@id/date_day_input_layout"
                android:layout_below="@+id/radio_gender"
                android:gravity="bottom"
                android:textSize="@dimen/textTitle"
                android:text="/"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>


            <android.support.design.widget.TextInputLayout
                android:layout_below="@+id/dob_placeholder"
                android:layout_toRightOf="@id/date_day_input_layout"
                android:id="@+id/date_month_input_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                app:errorTextAppearance="@style/InputTextErrorStyle">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/date_month_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/month"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_below="@+id/dob_placeholder"
                android:layout_toRightOf="@id/date_month_input_layout"
                android:id="@+id/date_year_input_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                app:errorTextAppearance="@style/InputTextErrorStyle">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/date_year_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/year"/>
            </android.support.design.widget.TextInputLayout>
            -->

            <android.support.design.widget.TextInputLayout
                android:id="@+id/father_guardian_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/dob_input_layout"
                app:errorEnabled="true"
                app:errorTextAppearance="@style/InputTextErrorStyle">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/father_guardian_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/father_guardian_hint"
                    android:inputType="textImeMultiLine"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/mother_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/father_guardian_input_layout"
                app:errorEnabled="true"
                app:errorTextAppearance="@style/InputTextErrorStyle">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/mother_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/mother_hint"
                    android:inputType="textImeMultiLine"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/student_address_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/mother_input_layout"
                app:errorEnabled="true"
                app:errorTextAppearance="@style/InputTextErrorStyle">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/student_address_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/student_address"
                    android:inputType="textImeMultiLine"/>
            </android.support.design.widget.TextInputLayout>
        </RelativeLayout>
    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_student_added"
        style="@style/FloatingActionButtonNormalStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:src="@drawable/ic_done"
        app:backgroundTint="@color/colorAccent"
        app:borderWidth="@dimen/fab_border_width"
        app:fabSize="normal"
        app:layout_anchorGravity="bottom|end|right"/>
</android.support.design.widget.CoordinatorLayout>
